compiler/testdata/invalid/stray_else.pr
// Else without matching if.
main() {
  else { x(); }
}
